--- a/Tourist Attraction/touristmobile.css
+++ b/Tourist Attraction/touristmobile.css
@@ -9,14 +9,12 @@
     body{
         font-size: 15px;
     }
-    a, p, ul, li{
-        
-    }
+    
     h1{
         font-size: 50px;
     }
     h2{
-        font-size: 40px;
+        font-size: 45px;
     }
     
     h3{
